# repo

./: .coveralls.yml  .travis.yml  LICENSE  LICENSE.md  README.md  SupportedHardwares.md  TODO.md  build.bash  install.bash  test.bash  trigger_build.bash
dev/: Makefile.inc  (+7 more)
dev/g++/projects/embedded/: CMakeLists.txt  Makefile  deinstall.cmake.in
dev/g++/projects/embedded/comm/: README.md
dev/g++/projects/embedded/comm/include/: abstract_channel.h  abstract_channel.hh  channel_manager.h  channel_manager.hh  channel_type.h  channel_type.hh  ipv4_address.h  ipv4_address.hh  ipv4_socket.h  ipv4_socket.hh  ipv6_address.h  ipv6_address.hh  ipv6_socket.h  ipv6_socket.hh  ipvx_address.h  ipvx_address.hh  ipvx_socket.h  ipvx_socket.hh  raw_channel.h  raw_channel.hh  socket.h  socket.hh  socket_address.h  socket_address.hh  tcp_channel.h  tcp_channel.hh  udp_channel.h  udp_channel.hh
dev/g++/projects/embedded/comm/lib/: README.md
dev/g++/projects/embedded/comm/objs/: CMakeLists.txt  Makefile  commConfig.cmake.in
dev/g++/projects/embedded/comm/src/: channel_manager.cc  channel_manager.cpp  ipv4_address.cc  ipv4_address.cpp  ipv4_socket.cc  ipv4_socket.cpp  ipv6_address.cc  ipv6_address.cpp  ipv6_socket.cc  ipv6_socket.cpp  raw_channel.cc  raw_channel.cpp  socket.cc  socket.cpp  socket_address.cc  socket_address.cpp  tcp_channel.cc  tcp_channel.cpp  udp_channel.cc  udp_channel.cpp
dev/g++/projects/embedded/comm/test/: testlib.cc  testlib.cpp
dev/g++/projects/embedded/converter/: README.md
dev/g++/projects/embedded/converter/docs/: o2.cfg
dev/g++/projects/embedded/converter/include/: converter.h  converter.hh
dev/g++/projects/embedded/converter/lib/: README.md
dev/g++/projects/embedded/converter/objs/: CMakeLists.txt  Makefile  converterConfig.cmake.in
dev/g++/projects/embedded/converter/src/: converter.cc  converter.cpp  mainpage.md
dev/g++/projects/embedded/converter/test/: testlib.cc  testlib.cpp
dev/g++/projects/embedded/demos/tcp_echo/include/: tcp_echo.hh  tcp_echo_server.hh
dev/g++/projects/embedded/demos/tcp_echo/objs/: CMakeLists.txt
dev/g++/projects/embedded/gps/include/: devices.h  gps_device.h  gps_device.hh  gps_device_factory.h  gps_device_factory.hh  gps_parser.h  gps_parser.hh  gps_parser_factory.h  gps_parser_factory.hh  nmea2000.h  nmea2000.hh  parsers.h  ublox.h  ublox.hh
dev/g++/projects/embedded/gps/lib/: README.md
dev/g++/projects/embedded/gps/objs/: Makefile
dev/g++/projects/embedded/gps/src/: gps_parser.cc  gps_parser.cpp  nmea2000.cc  nmea2000.cpp  ublox.cc  ublox.cpp
dev/g++/projects/embedded/gps/test/: testlib.cc  testlib.cpp
dev/g++/projects/embedded/helper/: README.md
dev/g++/projects/embedded/helper/docs/: o2.cfg
dev/g++/projects/embedded/helper/include/: date_time.h  date_time.hh  get_opt.h  get_opt.hh  helper.h  helper.hh  helper.t.h  ibstream.h  ibstream.t.h  keyboard.h  keyboard.hh  obstream.h  obstream.t.h  runnable.h  runnable.hh
dev/g++/projects/embedded/helper/lib/: README.md
dev/g++/projects/embedded/helper/objs/: CMakeLists.txt  Makefile  helperConfig.cmake.in  test.cpp
dev/g++/projects/embedded/helper/src/: date_time.cc  date_time.cpp  get_opt.cc  get_opt.cpp  helper.cc  helper.cpp  ibstream.cc  ibstream.cpp  keyboard.cc  keyboard.cpp  mainpage.md  obstream.cc  obstream.cpp
dev/g++/projects/embedded/helper/test/: testfile.txt  testlib.cc  testlib.cpp
dev/g++/projects/embedded/httpserver/: README.md
dev/g++/projects/embedded/httpserver/include/: http_request.hh  http_server.hh
dev/g++/projects/embedded/httpserver/objs/: CMakeLists.txt  CMakeLists.txt~  Makefile  httpserverConfig.cmake.in
dev/g++/projects/embedded/httpserver/src/: http_request.cc  http_server.cc
dev/g++/projects/embedded/httpserver/test/: testlib.cc
dev/g++/projects/embedded/ipc/: README.md
dev/g++/projects/embedded/ipc/docs/: o2.cfg
dev/g++/projects/embedded/ipc/include/: abstract_ipc.h  abstract_ipc.hh  ipc_manager.h  ipc_manager.hh  ipc_rights.h  ipc_type.h  message_queue.h  message_queue.hh  shared_memory.h  shared_memory.hh
dev/g++/projects/embedded/ipc/lib/: README.md
dev/g++/projects/embedded/ipc/objs/: CMakeLists.txt  Makefile  ipcConfig.cmake.in
dev/g++/projects/embedded/ipc/src/: ipc_manager.cc  ipc_manager.cpp  message_queue.cc  message_queue.cpp  shared_memory.cc  shared_memory.cpp
dev/g++/projects/embedded/ipc/test/: testlib.cc  testlib.cpp
dev/g++/projects/embedded/libhal/: README.md
dev/g++/projects/embedded/libhal/docs/: o2.cfg
dev/g++/projects/embedded/libhal/include/: libhal.h  libhal_i2c.h  libhal_pin_names.h  libhal_serial.h
dev/g++/projects/embedded/libhal/objs/: Makefile
dev/g++/projects/embedded/logger/: README.md
dev/g++/projects/embedded/logger/docs/: o2.cfg
dev/g++/projects/embedded/logger/include/: logger.h  logger.hh  logger_factory.h  logger_factory.hh  logger_levels.h  logger_levels.hh  logger_time_formats.h  logger_time_formats.hh
dev/g++/projects/embedded/logger/lib/: README.md
dev/g++/projects/embedded/logger/objs/: CMakeLists.txt  Makefile  logger.d  loggerConfig.cmake.in  testlib.d
dev/g++/projects/embedded/logger/src/: logger.cc  logger.cpp  mainpage.md
dev/g++/projects/embedded/logger/test/: testlib.cc  testlib.cpp
dev/g++/projects/embedded/security/: README.md  README.md~
dev/g++/projects/embedded/security/include/: ecdsa_signature.hh  key.hh  key.t.h  keys_pair.hh  rnd.hh  sha.hh  sha256.hh  sha_algorithms.hh  signature_algorithms.hh
dev/g++/projects/embedded/security/lib/: README.md  README.md~
dev/g++/projects/embedded/security/objs/: CMakeLists.txt  Makefile  securityConfig.cmake.in
dev/g++/projects/embedded/security/src/: ecdsa_signature.cc  keys_pair.cc  logger.cpp  mainpage.md  rnd.cc  sha.cc  sha256.cc
dev/g++/projects/embedded/security/test/: testlib.cc
dev/g++/projects/embedded/uart/include/: rs232.h  rs232.hh
dev/g++/projects/embedded/uart/lib/: README.md
dev/g++/projects/embedded/uart/objs/: Makefile
dev/g++/projects/embedded/uart/src/: mainpage.md  rs232.cc  rs232.cpp
dev/g++/projects/embedded/uart/test/: testlib.cpp
(+1122 files in other folders)
